UnweightedGraph.BfsIterator added